--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -36,11 +36,11 @@
 }
 
 .submit-button {
-  padding: 10px 20px;
+  padding: 10px 80px;
   background-color: #0099ff; /* GMO薄青 */
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -58,4 +58,14 @@
   margin-left: 4px;        
   border-radius: 2px;
   vertical-align: middle;  /* ラベル文字と縦位置揃え */
+}
+
+.form-input::placeholder {
+  color: #aaa;   /* 薄いグレー */
+  
+}
+
+.button-container {
+  text-align: center;
+  margin-top: 20px;
 }
