お問い合わせ文字数制限

--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -104,3 +104,14 @@
   background-color: #b3b3b3;
 }
 
+.error {
+  border-color: red;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.9em;
+  margin-top: 4px;
+}
+
+
