--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -112,7 +112,7 @@
   margin-left: 200px;    /* ラベル幅と同じだけ右に寄せる */
 }
 
-/* 文字数カウントも同様に下に配置（必要な場合） */
+/* 文字数カウントも下に配置 */
 .char-count {
   flex-basis: 100%;
   margin-left: 200px;    
